linux-user-chroot-newnet: New optional helper program
Some versions of the Linux kernel require large (order 4) contiguous
allocations per network namespace.  This optional helper program is a
workaround for that; one can create the empty network namespace just
once.

--- a/Makefile-user-chroot.am
+++ b/Makefile-user-chroot.am
@@ -20,3 +20,11 @@ bin_PROGRAMS += linux-user-chroot
 linux_user_chroot_SOURCES = src/linux-user-chroot.c
 
 linux_user_chroot_CFLAGS = $(AM_CFLAGS)
+
+if BUILD_NEWNET_HELPER
+bin_PROGRAMS += linux-user-chroot-newnet
+endif
+
+linux_user_chroot_newnet_SOURCES = src/linux-user-chroot-newnet.c
+
+linux_user_chroot_newnet_CFLAGS = $(AM_CFLAGS)
